# dark-bloom-manager-test

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md
.githooks/: pre-commit
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/analytics/: mod.rs
src/config/: mod.rs
src/daemon/: mod.rs  runner.rs  signals.rs
src/darkbloom/: controller.rs  mod.rs
src/dashboard/: mod.rs  server.rs
src/dashboard/static/: index.html
src/decision/: mod.rs
src/launchd/: mod.rs
src/memory/: mod.rs
src/omlx/: client.rs  mod.rs  monitor.rs
