[package]
name = "dark-bloom-manager"
version = "0.1.0"
edition = "2021"
description = "Supervisor daemon for Darkbloom provider with OMLX coordination"
license = "MIT"
repository = "https://github.com/example/dark-bloom-manager"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "tracing"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client (for OMLX API)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# HTTP server (dashboard)
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.28", features = ["signal", "process"] }
sysinfo = "0.30"

# Embed static files
rust-embed = "8"

# Async utilities
tokio-util = "0.7"
futures = "0.3"
dirs = "6.0.0"
mime_guess = "2.0.5"
open = "5.3.3"
url = "2.5.8"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }

[dev-dependencies]
mockall = "0.12"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
